--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
