--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
+    "firebase": "^10.7.2",
+    "firebase-admin": "^12.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
